--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
 
     <div class="list-container">
       <ul class="list">
-        <li class="underline-effect"><a href="https://outlook.office365.com" target="_blank"> ./Outlook </a></li>
-        <li class="underline-effect"><a href="https://prep20202.usc.edu.co/" target="_blank"> ./Moddle </a></li>
-        <li class="underline-effect"><a href="https://teams.microsoft.com" target="_blank"> ./MS Teams </a></li>
+        <li class="underline-effect"><a href="https://outlook.office365.com"> ./Outlook </a></li>
+        <li class="underline-effect"><a href="https://prep20202.usc.edu.co/"> ./Moddle </a></li>
+        <li class="underline-effect"><a href="https://teams.microsoft.com"> ./MS Teams </a></li>
       </ul>
 
       <ul class="list">
-        <li class="underline-effect"><a href="https://github.com/" target="_blank"> ./GitHub </a></li>
-        <li class="underline-effect"><a href="https://leetcode.com/" target="_blank"> ./LeetCode </a></li>
-        <li class="underline-effect"><a href="https://gemini.google.com/app" target="_blank"> ./AI </a></li>
+        <li class="underline-effect"><a href="https://github.com/"> ./GitHub </a></li>
+        <li class="underline-effect"><a href="https://leetcode.com/"> ./LeetCode </a></li>
+        <li class="underline-effect"><a href="https://gemini.google.com/app"> ./AI </a></li>
       </ul>
 
       <ul class="list">
-        <li class="underline-effect"><a href="https://www.youtube.com/" target="_blank"> ./Youtube </a></li>
-        <li class="underline-effect"><a href="https://open.spotify.com/" target="_blank"> ./Spotify </a></li>
-        <li class="underline-effect"><a href="https://twitter.com" target="_blank"> ./Twitter </a></li>
+        <li class="underline-effect"><a href="https://www.youtube.com/"> ./Youtube </a></li>
+        <li class="underline-effect"><a href="https://open.spotify.com/"> ./Spotify </a></li>
+        <li class="underline-effect"><a href="https://twitter.com"> ./Twitter </a></li>
       </ul>
 
       <ul class="list">
-        <li class="underline-effect"><a href="https://mail.proton.me/u/1/inbox" target="_blank"> ./Proton </a></li>
-        <li class="underline-effect"><a href="https://mangadex.org/" target="_blank"> ./MangaDex </a></li>
-        <li class="underline-effect"><a href="https://voidlinux.org/" target="_blank"> ./Void </a></li>
+        <li class="underline-effect"><a href="https://mail.proton.me/u/1/inbox"> ./Proton </a></li>
+        <li class="underline-effect"><a href="https://mangadex.org/"> ./MangaDex </a></li>
+        <li class="underline-effect"><a href="https://voidlinux.org/"> ./Void </a></li>
       </ul>
 
     </div>
