changed spotify for tidal

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <ul class="list">
         <li class="underline-effect"><a href="https://www.youtube.com/"> ./Youtube </a></li>
-        <li class="underline-effect"><a href="https://open.spotify.com/"> ./Spotify </a></li>
+        <li class="underline-effect"><a href="https://listen.tidal.com"> ./Tidal </a></li>
         <li class="underline-effect"><a href="https://twitter.com"> ./Twitter </a></li>
       </ul>
 
